--- a/board.html
+++ b/board.html
@@ -78,6 +78,10 @@
             </div>
         </div>
     </div>
+
+
+    <div id="showTaskCard"></div>
+
     
     <script src="./js/board.js"></script>
 </body>
