--- a/summary.html
+++ b/summary.html
@@ -34,7 +34,7 @@
         <div class="summary-content">
             <div class="summery-elements">
                 <div class="summery-container">
-                    <a class="tasks-top box-left backgroundBlack" href="#">
+                    <a class="tasks-top box-left backgroundBlack" href="./board.html">
                         <h2 id="tasks-in-board">5</h2>
                         <div class="task-text">
                             Tasks in
@@ -42,7 +42,7 @@
                             Board
                         </div>
                     </a>
-                    <a class="tasks-top box-middle backgroundBlack" href="#">
+                    <a class="tasks-top box-middle backgroundBlack" href="./board.html">
                         <h2 id="tasks-in-progress">2</h2>
                         <div class="task-text">
                             Tasks in
@@ -50,7 +50,7 @@
                             Progress
                         </div>
                     </a>
-                    <a class="tasks-top box-right backgroundBlack" href="#">
+                    <a class="tasks-top box-right backgroundBlack" href="./board.html">
                         <h2 id="awaiting-feedback">2</h2>
                         <div class="task-text">
                             Awaiting
@@ -60,7 +60,7 @@
                     </a>
                 </div>
                 <div class="summery-container">
-                    <a class="task-middle box-middle backgroundBlack" href="#">
+                    <a class="task-middle box-middle backgroundBlack" href="./board.html">
                         <div class="summary-field">
                             <img src="assets/image/Summary/prio-height.svg" alt="">
                             <div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="summery-container">
                     <a class="task-bottom box-left backgroundBlack" onmouseover="hoverLeftButton()"
-                        onmouseout="hoverOffLeftButton()" href="#">
+                        onmouseout="hoverOffLeftButton()" href="./board.html">
                         <div class="summary-field">
                             <img id="button-left-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
                             <img id="button-left-hover2" class="task-bottom-img1"
@@ -92,7 +92,7 @@
                         </div>
                     </a>
                     <a class="task-bottom box-right backgroundBlack" onmouseover="hoverRightButton()"
-                        onmouseout="hoverOffRightButton()" href="#">
+                        onmouseout="hoverOffRightButton()" href="./board.html">
                         <div class="summary-field">
                             <img id="button-right-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
                             <img id="button-right-hover2" class="task-bottom-img2"
