insert strage data inboard

--- a/board.html
+++ b/board.html
@@ -15,6 +15,7 @@
     <script src="script.js"></script>
     <script src="./js/summary.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/storage.js"></script>
 </head>
 
 <body onload="includeHTML(2); updateBoardHTML()">
