--- a/summary.html
+++ b/summary.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body onload="includeHTML(0); greetUser()">
+<body onload="init(); includeHTML(0); greetUser()">
 
     <div w3-include-html="assets/templates/header.html"></div>
     <div w3-include-html="assets/templates/header_responsive.html"></div>
@@ -73,7 +73,7 @@
                             <div class="seperator-deadline"></div>
                         </div>
                         <div>
-                            <h3 id="upcoming-deadline">October 16, 2022</h3>
+                            <h3 id="upcoming-deadline"></h3>
                             <div class="font-16">Upcoming Deadline</div>
                         </div>
                     </a>
