--- a/add_task.html
+++ b/add_task.html
@@ -24,11 +24,14 @@
     <div w3-include-html="assets/templates/header_responsive.html"></div>
     <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
-    
 
-</body>  
+</body>
+
 <script src="./script.js"></script>
 <script src="./js/add_task.js"></script>
+<script src="./js/add_task_subtasks.js"></script>
+<script src="./js/add_task_assignment.js"></script>
+<script src="./js/add_task_submit.js"></script>
 <script src="./js/contacts.js"></script>
 <script src="./js/storage.js"></script>
 
