--- a/board.html
+++ b/board.html
@@ -7,15 +7,13 @@
     <title>Board | Join</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/board.css">
-    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
+    <link rel="stylesheet" href="css/add_task.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
-    <script src="script.js"></script>
-    <script src="./js/summary.js"></script>
-    <script src="./js/add_task.js"></script>
-    <script src="./js/storage.js"></script>
+
 </head>
 
 <body onload="includeHTML(2); updateBoardHTML()">
@@ -26,7 +24,9 @@
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
-    <div class="body">
+
+
+    <div class="board-setion">
         <div class="head-section">
             <div class="headline-h1">
                 <h1>Board</h1>
@@ -38,7 +38,7 @@
                     <img id="search" class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
                 </div>
 
-                <button class="add-task" href="#">
+                <button class="add-task" onclick='openAddTask()'>
                     <span>Add task</span>
                     <img src="assets/image/board/add.svg" alt="Plus Icon">
                 </button>
@@ -65,25 +65,39 @@
 
         <div class="task-field">
             <div class="task-area">
-                <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')" ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')" data-category="Todo">
+                <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
+                    ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
+                    data-category="Todo">
                 </div>
 
-                <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')" ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')" data-category="In progress">
+                <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
+                    ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"
+                    data-category="In progress">
                 </div>
 
-                <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')" ondragleave="removeHighlight('awaitFeedback')" ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="Await feedback">
+                <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')"
+                    ondragleave="removeHighlight('awaitFeedback')"
+                    ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="Await feedback">
                 </div>
 
-                <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')" ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')" data-category="Done">
+                <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
+                    ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')"
+                    data-category="Done">
                 </div>
             </div>
         </div>
+
+        <div id="showTaskCard"></div>
     </div>
 
 
-    <div id="showTaskCard"></div>
-
-    
+    <script src="script.js"></script>
+    <script src="./js/add_task.js"></script>
+    <script src="./js/add_task_subtasks.js"></script>
+    <script src="./js/add_task_assignment.js"></script>
+    <script src="./js/add_task_submit.js"></script>
+    <script src="./js/storage.js"></script>
     <script src="./js/board.js"></script>
 </body>
+
 </html>
