--- a/board.html
+++ b/board.html
@@ -38,7 +38,7 @@
                     <img id="search" class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
                 </div>
 
-                <button class="add-task" onclick='openAddTask()'>
+                <button class="add-task" onclick='openAddTaskTemplate()'>
                     <span>Add task</span>
                     <img src="assets/image/board/add.svg" alt="Plus Icon">
                 </button>
