--- a/board.html
+++ b/board.html
@@ -72,12 +72,12 @@
 
                 <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
                     ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"
-                    data-category="In progress">
+                    data-category="inProgress">
                 </div>
 
                 <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')"
                     ondragleave="removeHighlight('awaitFeedback')"
-                    ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="Await feedback">
+                    ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="awaitFeedback">
                 </div>
 
                 <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
