--- a/board.html
+++ b/board.html
@@ -67,7 +67,7 @@
             <div class="task-area">
                 <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
                     ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
-                    data-category="Todo">
+                    data-category="toDo">
                 </div>
 
                 <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
@@ -82,7 +82,7 @@
 
                 <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
                     ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')"
-                    data-category="Done">
+                    data-category="done">
                 </div>
             </div>
         </div>
