Fixed Category no set in Task

--- a/board.html
+++ b/board.html
@@ -24,9 +24,7 @@
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="sidebar-responsive" w3-include-html="assets/templates/sidebar-responsive.html"></div>
 
-
-
-    <div class="board-setion">
+    <div class="board-section">
         <div class="head-section">
             <div class="headline-h1">
                 <h1>Board</h1>
