--- a/board.html
+++ b/board.html
@@ -46,15 +46,15 @@
         <div class="task-board">
             <div class="task-section">
                 <span>To do</span>
-                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img id="plus-img-1" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-1')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-1')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>In progress</span>
-                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img id="plus-img-2" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-2')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-2')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Await feedback</span>
-                <img class="plus-icon" src="assets/image/board/plus button.svg" alt="Plus Icon">
+                <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Done</span>
@@ -84,6 +84,7 @@
                 </div>
             </div>
         </div>
+
 
         <div id="showTaskCard"></div>
     </div>
