--- a/board.html
+++ b/board.html
@@ -54,7 +54,7 @@
             </div>
             <div class="task-section">
                 <span>Await feedback</span>
-                <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-3')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Done</span>
@@ -62,6 +62,7 @@
         </div>
 
         <div class="task-field">
+            
             <div class="task-area">
                 <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
                     ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
