--- a/add_task.html
+++ b/add_task.html
@@ -33,6 +33,8 @@
 <script src="./js/add_task_assignment.js"></script>
 <script src="./js/add_task_submit.js"></script>
 <script src="./js/contacts.js"></script>
+<script src="./js/contact_form.js"></script>
+<script src="./js/contact_form_submit.js"></script>
 <script src="./js/storage.js"></script>
 
 </html>
