--- a/board.html
+++ b/board.html
@@ -98,6 +98,9 @@
     <script src="./js/add_task_submit.js"></script>
     <script src="./js/storage.js"></script>
     <script src="./js/board.js"></script>
+    <script src="./js/contacts.js"></script>
+    <script src="./js/contact_form.js"></script>
+    <script src="./js/contact_form_submit.js"></script>
 </body>
 
 </html>
