--- a/board.html
+++ b/board.html
@@ -63,25 +63,27 @@
 
         <div class="task-field">
             
-            <div class="task-area">
-                <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
-                    ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
-                    data-category="toDo">
-                </div>
+            <div class="sroll-area">
+                <div class="task-area">
+                    <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
+                        ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
+                        data-category="toDo">
+                    </div>
 
-                <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
-                    ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"
-                    data-category="inProgress">
-                </div>
+                    <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
+                        ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"
+                        data-category="inProgress">
+                    </div>
 
-                <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')"
-                    ondragleave="removeHighlight('awaitFeedback')"
-                    ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="awaitFeedback">
-                </div>
+                    <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')"
+                        ondragleave="removeHighlight('awaitFeedback')"
+                        ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="awaitFeedback">
+                    </div>
 
-                <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
-                    ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')"
-                    data-category="done">
+                    <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
+                        ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')"
+                        data-category="done">
+                    </div>
                 </div>
             </div>
         </div>
