--- a/board.html
+++ b/board.html
@@ -40,9 +40,17 @@
                     <span>Add task</span>
                     <img src="assets/image/board/add.svg" alt="Plus Icon">
                 </button>
+
+                <img class="addTaskResponiveImg" src="assets/icons/addTaskResponsive.svg" alt="addTaskPlus">
             </div>
         </div>
 
+
+        <div class="input-section-repsonsive">
+            <input id="search-input" type="text" placeholder="Find Task">
+            <img class="input-line" src="assets/image/board/input-line.svg" alt="Line">
+            <img id="search" class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
+        </div>
         <div class="task-board">
             <div class="task-section">
                 <span>To do</span>
@@ -65,21 +73,36 @@
             
             <div class="sroll-area">
                 <div class="task-area">
+                    <div class="task-section-responsive">
+                        <span>To do</span>
+                        <img id="plus-img-1" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-1')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-1')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                    </div>
                     <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
                         ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
                         data-category="toDo">
                     </div>
 
+                    <div class="task-section-responsive">
+                        <span>In progress</span>
+                        <img id="plus-img-2" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-2')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-2')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                    </div>
                     <div id="inProgress" class="creat-task-area" ondrop="moveTo(event); removeHighlight('inProgress')"
                         ondragleave="removeHighlight('inProgress')" ondragover="allowDrop(event); highlight('inProgress')"
                         data-category="inProgress">
                     </div>
 
+                    <div class="task-section-responsive">
+                        <span>Await feedback</span>
+                        <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-3')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                    </div>
                     <div id="awaitFeedback" class="creat-task-area" ondrop="moveTo(event); removeHighlight('awaitFeedback')"
                         ondragleave="removeHighlight('awaitFeedback')"
                         ondragover="allowDrop(event); highlight('awaitFeedback')" data-category="awaitFeedback">
                     </div>
 
+                    <div class="task-section-responsive">
+                        <span>Done</span>
+                    </div>
                     <div id="done" class="creat-task-area" ondrop="moveTo(event); removeHighlight('done')"
                         ondragleave="removeHighlight('done')" ondragover="allowDrop(event); highlight('done')"
                         data-category="done">
