--- a/board.html
+++ b/board.html
@@ -40,16 +40,15 @@
                     <span>Add task</span>
                     <img src="assets/image/board/add.svg" alt="Plus Icon">
                 </button>
-
-                <img class="addTaskResponiveImg" src="assets/icons/addTaskResponsive.svg" alt="addTaskPlus">
+                <img class="addTask-responive-img" src="assets/icons/addTaskResponsive.svg" alt="addTaskPlus">
             </div>
         </div>
 
 
         <div class="input-section-repsonsive">
-            <input id="search-input" type="text" placeholder="Find Task">
+            <input id="search-input-responsive" type="text" placeholder="Find Task">
             <img class="input-line" src="assets/image/board/input-line.svg" alt="Line">
-            <img id="search" class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
+            <img id="search-responsive" class="input-search" src="assets/image/board/search.svg" alt="Search Icon">
         </div>
         <div class="task-board">
             <div class="task-section">
