updated filter function

--- a/board.html
+++ b/board.html
@@ -76,8 +76,8 @@
                         <span>To do</span>
                         <img id="plus-img-1-responsive" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-1-responsive')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-1-responsive')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
                     </div>
-                    <div id="todo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('todo')"
-                        ondragleave="removeHighlight('todo')" ondragover="allowDrop(event); highlight('todo')"
+                    <div id="toDo" class="creat-task-area" ondrop="moveTo(event); removeHighlight('toDo')"
+                        ondragleave="removeHighlight('toDo')" ondragover="allowDrop(event); highlight('toDo')"
                         data-category="toDo">
                     </div>
 
