Added create Task on different Status & Delete Task

--- a/board.html
+++ b/board.html
@@ -53,15 +53,15 @@
         <div class="task-board">
             <div class="task-section">
                 <span>To do</span>
-                <img id="plus-img-1" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-1')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-1')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                <img id="plus-img-1" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-1')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-1')" onclick="openAddTaskTemplate('toDo')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>In progress</span>
-                <img id="plus-img-2" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-2')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-2')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                <img id="plus-img-2" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-2')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-2')" onclick="openAddTaskTemplate('inProgress')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Await feedback</span>
-                <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-3')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
+                <img id="plus-img-3" onmouseover="changeImage('assets/image/board/plus-button-blue.svg', 'plus-img-3')" onmouseout="changeImage('assets/image/board/plus-button.svg', 'plus-img-3')" onclick="openAddTaskTemplate('awaitFeedback')" class="plus-icon" src="assets/image/board/plus-button.svg" alt="Plus Icon">
             </div>
             <div class="task-section">
                 <span>Done</span>
