--- a/board.html
+++ b/board.html
@@ -123,6 +123,7 @@
     <script src="./js/storage.js"></script>
     <script src="./js/board.js"></script>
     <script src="./js/board_render.js"></script>
+    <script src="./js/board_task_changes.js"></script>
     <script src="./js/contacts.js"></script>
     <script src="./js/contact_form.js"></script>
     <script src="./js/contact_form_submit.js"></script>
