--- a/add_task.html
+++ b/add_task.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/add_task.css">
+    <link rel="stylesheet" href="css/add_task-responsiv.css">
     <link rel="icon" type="image/x-icon" href="../assets/image/join-logo.svg">
 
 </head>
