add task responsiv finished

--- a/board.html
+++ b/board.html
@@ -40,7 +40,7 @@
                     <span>Add task</span>
                     <img src="assets/image/board/add.svg" alt="Plus Icon">
                 </button>
-                <img class="addTask-responive-img" src="assets/icons/addTaskResponsive.svg" alt="addTaskPlus">
+                <img onclick="openAddTask()" class="addTask-responive-img" src="assets/icons/addTaskResponsive.svg" alt="addTaskPlus">
             </div>
         </div>
 
