css board update

--- a/board.html
+++ b/board.html
@@ -70,7 +70,7 @@
 
         <div class="task-field">
             
-            <div class="sroll-area">
+            <div class="scroll-area">
                 <div class="task-area">
                     <div class="task-section-responsive">
                         <span>To do</span>
