update html and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/login_responsiv.css">
-    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
 </head>
 
 <body onload="init(); renderLoginContainer()">
@@ -17,7 +17,7 @@
         <img src="./assets/image/join-logo.svg" class="logo" id="logo">
         <div id="login-container"></div>
         <div id="forgot-password-message" class="d-none">
-            <div class="forgot-password-message"><img src="../assets/image/SendCheck.png">
+            <div class="forgot-password-message"><img src="./assets/image/SendCheck.png">
                 <span class="forgot-password-message-text">An E-Mail has been sent to you</span>
             </div>
         </div>
