--- a/reset.password.html
+++ b/reset.password.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-    <link rel="icon" type="image/x-icon" href="../assets/image/join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/image/join-logo.svg">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/login_responsiv.css">
     <link rel="stylesheet" href="css/reset_password.css">
@@ -17,7 +17,7 @@
     <img src="./assets/image/join-logo.svg" class="logo" id="logo">
     <form id="reset-form" class="animation" onsubmit="onSubmit(event)">
         <img onclick="window.location.href='index.html'" class="reset-password-arrow arrow"
-            src="../assets/image/arrow-left-line.png">
+            src="./assets/image/arrow-left-line.png">
         <div class="heading-seperator">
             <h2 class="login-heading">Reset your Password</h2>
             <div class="seperator"></div>
