--- a/add_task.html
+++ b/add_task.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/add_task.css">
     <link rel="stylesheet" href="css/add_task-responsiv.css">
-    <link rel="icon" type="image/x-icon" href="../assets/image/join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets/image/join-logo.svg">
 
 </head>
 
