--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/add_task.css">
-    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
 
 </head>
 
