--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/contact.css">
-    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <link rel="stylesheet" href="css/contact-responsiv.css">
+    <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
 
 </head>
 
