--- a/legal-notice.html
+++ b/legal-notice.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/legal_notice.css">
-    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
     <script src="script.js"></script>
 </head>
 
