--- a/board.html
+++ b/board.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body onload="includeHTML(2); updateBoardHTML()">
+<body onload="boardInit()">
 
     <div w3-include-html="assets/templates/header.html"></div>
     <div w3-include-html="assets/templates/header_responsive.html"></div>
@@ -127,6 +127,7 @@
     <script src="./js/contacts.js"></script>
     <script src="./js/contact_form.js"></script>
     <script src="./js/contact_form_submit.js"></script>
+    <script src="./js/username.js"></script>
 </body>
 
 </html>
