--- a/help.html
+++ b/help.html
@@ -16,8 +16,7 @@
     <script src="script.js"></script>
 </head>
 
-<body onload="includeHTML()">
-
+<body onload="helpInit()">
     <div w3-include-html="assets/templates/header.html"></div>
     <div w3-include-html="assets/templates/header_responsive.html"></div>
 
@@ -104,7 +103,7 @@
         <h2 class="help-end">Enjoy using Join!</h2>
     </div>
 
-
+    <script src="./js/username.js"></script>
 </body>
 
 </html>
