--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/contact-responsiv.css">
     <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
-
 </head>
 
-<body onload="includeHTML(3);initContacts()" id="body">
+<body onload="contactInit()" id="body">
     <div include-html="./assets/templates/add_contact.html"></div>
     <div w3-include-html="assets/templates/header.html"></div>
     <div w3-include-html="assets/templates/header_responsive.html"></div>
@@ -58,23 +57,14 @@
                 </div>
             </div>
             <div onclick="closeContactMenuResponsive()" id="overlay-contact" class="dNone"></div>
-
-
         </div>
     </div>
-
-
-
-
-
-
 
     <script src="./script.js"></script>
     <script src="./js/storage.js"></script>
     <script src="./js/contacts.js"></script>
     <script src="./js/contact_form.js"></script>
     <script src="./js/contact_form_submit.js"></script>
-
+    <script src="./js/username.js"></script>
 </body>
-
 </html>
