--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
 </head>
 
-<body onload="init(); renderLoginContainer()">
+<body onload="loginInit()">
     <div id="homepage">
         <img src="./assets/image/join-logo.svg" class="logo" id="logo">
         <div id="login-container"></div>
