--- a/summary.html
+++ b/summary.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Summary | Join</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/header-responsive.css">
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/sidebar-responsive.css">
     <link rel="stylesheet" href="css/summary.css">
     <link rel="icon" type="image/x-icon" href="./assets\image\join-logo.svg">
-
 </head>
 
 <body onload="initSummary()">
-
     <div w3-include-html="assets/templates/header.html"></div>
     <div w3-include-html="assets/templates/header_responsive.html"></div>
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
@@ -119,6 +117,7 @@
     <script src="./js/summary.js"></script>
     <script src="./js/storage.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/username.js"></script>
 </body>
 
 </html>
