--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,11 @@
                 Add new contact
                 <img src='./assets/icons/person-add.svg'>
             </button>
-            <img onclick="includeContactHTML('addContact')" class="contact-button-mobile dNone" src='./assets/icons/person-add.svg'>
+            <div onclick="includeContactHTML('addContact')" class="contact-button-mobile dNone">
+                <div>
+                    <img src='./assets/icons/person-add.svg'>
+                </div>
+            </div>
 
             <div id="contactList" class="user-list scrollable"></div>
         </div>
