Updated Board Search

--- a/board.html
+++ b/board.html
@@ -121,6 +121,7 @@
     <script src="./js/add_task_assignment.js"></script>
     <script src="./js/add_task_submit.js"></script>
     <script src="./js/storage.js"></script>
+    <script src="./js/board_event_listeners.js"></script>
     <script src="./js/board.js"></script>
     <script src="./js/board_render.js"></script>
     <script src="./js/board_task_changes.js"></script>
