contact menu responsiv correction

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                     <div>Delete</div>
                 </div>
             </div>
-            <div onclick="closeContactMenuResponsive()" id="overlay-contact" class="dNone"></div>
+            <div onclick="closeContactMenuResponsive(event)" id="overlay-contact" class="dNone"></div>
         </div>
     </div>
 
