--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <div class="selected-contact-body" id="selectedContactBody">
             </div>
 
-            <div id="responsive-menu-container" class="responsive-menu-container hidden-add-contact-menu-responsive">
+            <div id="responsive-menu-container" class="responsive-menu-container">
                 <div onclick='includeContactHTML("editContact")' class="responsive-menu" onmouseover="changeImage('assets/icons/edit-blue.svg', 'editImageResponsive')" onmouseout="changeImage('assets/icons/pen-icon.svg', 'editImageResponsive')">
                     <img id="editImageResponsive" src="assets/icons/pen-icon.svg" alt="Edit Icon">
                     <div>Edit</div>
@@ -60,6 +60,7 @@
                     <div>Delete</div>
                 </div>
             </div>
+            <div>halloooooooooo</div>
             <div onclick="closeContactMenuResponsive(event)" id="overlay-contact" class="dNone"></div>
         </div>
     </div>
